# Modelarium-for-Python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
modelarium/: __init__.py  jvm.py
scripts/: fetch_jar.py
