[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelarium"
version = "0.0.1"
description = "Python wrapper for the Modelarium Java agent-based modelling framework."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Joshua McDonagh" }
]
keywords = ["agent-based-modeling", "simulation", "abm", "java"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/JoshMcDonagh/Modelarium-for-Python"
Source = "https://github.com/JoshMcDonagh/Modelarium-for-Python"

[tool.setuptools]
include-package-data = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
modelarium = ["_jars/*.jar"]

[tool.modelarium]
java_group_id = "dev.modelarium"
java_artifact_id = "modelarium"
java_version = "1.1.2"
